# bokeh-dockerception

./: .coveragerc  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/dockerception/: app.py
src/dockerception/templates/: 404.html  base.html
src/dockerception/ui/components/: synthetic.py
src/dockerception/ui/interface/apps/: pn_sinewave.py
